# fw_screen

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
data_example/: anm.json  sps.json
docker_mosquitto/: README.md  docker-compose.yaml  mosquitto.conf
fw_screen/main/: data.c
main/: CMakeLists.txt  config.h  data.c  data.h  idf_component.yml  lvgl_ui.c  lvgl_ui.h  lvgl_utils.c  lvgl_utils.h  main.c  screen.c  screen.h  tusb_cdc.c  tusb_cdc.h  uart_utils.c  uart_utils.h  usb_cdc.c  usb_cdc.h
server/: Cargo.toml
server/src/: main.rs
server_log/: Cargo.toml
server_log/src/: main.rs
