[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
rand = "0.9.2"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.8.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
clap = { version = "4.5", features = ["derive"] }
